# Django_PlaneModel

./: .env  .env.dev  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
PlaneModel/: db.sqlite3  manage.py
PlaneModel/PlaneModel/: asgi.py  settings.py  urls.py  wsgi.py
PlaneModel/account/: forms.py  urls.py  views.py
PlaneModel/account/templates/account/: log_in.html  register.html
PlaneModel/account/templates/account/login/: login_body.html
PlaneModel/account/templates/account/register/: register_body.html
PlaneModel/catalog/: admin.py  endpoints.py  forms.py  models.py  serializers.py  url_page.py  urls.py  views.py
PlaneModel/catalog/migrations/: 0001_initial.py  0002_catalogitem_item_info.py  0003_catalogitem_category.py  0004_alter_catalogitem_options_alter_category_options_and_more.py
PlaneModel/catalog/static/css/: additional.css  card_style.css  item_page.css
PlaneModel/catalog/static/js/: additional.js
PlaneModel/catalog/templates/catalog/: add_product.html  add_product_images.html  base.html  catalog_item.html  home_page.html  item_page.html
PlaneModel/catalog/templates/catalog/basket/: basket.html
PlaneModel/catalog/templates/catalog/home/: home_body.html
PlaneModel/catalog/templates/catalog/include/: body_in_add_product.html  body_in_add_product_images.html  body_in_item_page.html  body_list.html  card_list.html  item_page.html  nav_down.html  navbar.html  open_item_page.html  sidebar.html
PlaneModel/catalog/templatetags/: user_tags.py
